--- a/nieuwe/assets/css/slideFrame.css
+++ b/nieuwe/assets/css/slideFrame.css
@@ -156,6 +156,6 @@
     position: absolute !important;
     bottom: 0 !important;
     width: 100% !important;
-    flex-direction: row-reverse !important;
+    /* flex-direction: row-reverse !important; */
   }
 }
