--- a/nieuwe/assets/css/more.css
+++ b/nieuwe/assets/css/more.css
@@ -103,25 +103,27 @@
 
 
 .carousel-cell {
-    width: 70%;
+    width: 90%;
     aspect-ratio: 4/2.5;
     height: auto;
     margin-right: 10px;
 }
 
+
+
 /* position dots up a bit */
 .flickity-page-dots {
     bottom: 0 !important;
     display: flex !important;
-    padding-top: 20px !important;
+    padding-top: 14px !important;
     position: relative !important;
     width: 100% !important;
-    display: none !important;
+    justify-content: center;
 }
 
 /* dots are lines */
 .flickity-page-dots .dot {
-    height: 4px !important;
+    height: 2px !important;
     width: 100% !important;
     margin: 0 !important;
     border-radius: 0 !important;
@@ -135,7 +137,7 @@
 
 @media (max-width: 500px) {
     .carousel-cell {
-        width: 90%;
+        width: 100%;
         aspect-ratio: 4/2.5;
         height: auto;
         margin-right: 10px;
