--- a/nieuwe/assets/css/output.css
+++ b/nieuwe/assets/css/output.css
@@ -7,23 +7,19 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-red-100: oklch(93.6% 0.032 17.717);
     --color-red-600: oklch(57.7% 0.245 27.325);
     --color-amber-800: oklch(47.3% 0.137 46.201);
     --color-green-600: oklch(62.7% 0.194 149.214);
     --color-blue-200: oklch(88.2% 0.059 254.128);
     --color-blue-700: oklch(48.8% 0.243 264.376);
     --color-blue-800: oklch(42.4% 0.199 265.638);
-    --color-pink-500: oklch(65.6% 0.241 354.308);
-    --color-gray-500: oklch(55.1% 0.027 264.364);
-    --color-gray-700: oklch(37.3% 0.034 259.733);
     --color-zinc-200: oklch(92% 0.004 286.32);
     --color-zinc-300: oklch(87.1% 0.006 286.286);
-    --color-zinc-400: oklch(70.5% 0.015 286.067);
-    --color-zinc-500: oklch(55.2% 0.016 285.938);
     --color-black: #000000;
     --color-white: #fff;
     --spacing: 0.25rem;
+    --text-xs: 0.75rem;
+    --text-xs--line-height: calc(1 / 0.75);
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-base: 1rem;
@@ -36,6 +32,9 @@
     --leading-tight: 1.25;
     --radius-md: 0.375rem;
     --radius-lg: 0.5rem;
+    --radius-xl: 0.75rem;
+    --radius-2xl: 1rem;
+    --radius-3xl: 1.5rem;
     --radius-4xl: 2rem;
     --ease-out: cubic-bezier(0, 0, 0.2, 1);
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
@@ -278,6 +277,12 @@
   .mx-px {
     margin-inline: 1px;
   }
+  .mt-1 {
+    margin-top: calc(var(--spacing) * 1);
+  }
+  .mt-2 {
+    margin-top: calc(var(--spacing) * 2);
+  }
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
   }
@@ -330,8 +335,8 @@
   .h-3 {
     height: calc(var(--spacing) * 3);
   }
-  .h-\[16px\] {
-    height: 16px;
+  .h-\[12px\] {
+    height: 12px;
   }
   .h-\[25px\] {
     height: 25px;
@@ -339,11 +344,11 @@
   .h-\[30px\] {
     height: 30px;
   }
-  .h-\[70vh\] {
-    height: 70vh;
-  }
   .h-\[110px\] {
     height: 110px;
+  }
+  .h-\[calc\(100vh-150px\)\] {
+    height: calc(100vh - 150px);
   }
   .h-fit {
     height: fit-content;
@@ -351,14 +356,14 @@
   .h-full {
     height: 100%;
   }
-  .h-screen {
-    height: 100vh;
+  .h-svh {
+    height: 100svh;
   }
   .w-3 {
     width: calc(var(--spacing) * 3);
   }
-  .w-\[16px\] {
-    width: 16px;
+  .w-\[12px\] {
+    width: 12px;
   }
   .w-\[30px\] {
     width: 30px;
@@ -460,8 +465,11 @@
   .scroll-smooth {
     scroll-behavior: smooth;
   }
-  .rounded-4xl {
-    border-radius: var(--radius-4xl);
+  .rounded-2xl {
+    border-radius: var(--radius-2xl);
+  }
+  .rounded-3xl {
+    border-radius: var(--radius-3xl);
   }
   .rounded-\[6px\] {
     border-radius: 6px;
@@ -477,6 +485,9 @@
   }
   .rounded-md {
     border-radius: var(--radius-md);
+  }
+  .rounded-xl {
+    border-radius: var(--radius-xl);
   }
   .border {
     border-style: var(--tw-border-style);
@@ -511,9 +522,6 @@
   }
   .bg-amber-800 {
     background-color: var(--color-amber-800);
-  }
-  .bg-black {
-    background-color: var(--color-black);
   }
   .bg-blue-800 {
     background-color: var(--color-blue-800);
@@ -645,20 +653,14 @@
   .text-white {
     color: var(--color-white);
   }
-  .text-zinc-200 {
-    color: var(--color-zinc-200);
-  }
-  .text-zinc-300 {
-    color: var(--color-zinc-300);
-  }
-  .text-zinc-400 {
-    color: var(--color-zinc-400);
-  }
-  .text-zinc-500 {
-    color: var(--color-zinc-500);
-  }
   .uppercase {
     text-transform: uppercase;
+  }
+  .italic {
+    font-style: italic;
+  }
+  .underline {
+    text-decoration-line: underline;
   }
   .opacity-0 {
     opacity: 0%;
