--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1236,14 +1236,24 @@
   .delay-24 {
     transition-delay: 24ms;
   }
+  .delay-100 {
+    transition-delay: 100ms;
+  }
   .delay-150 {
     transition-delay: 150ms;
+  }
+  .delay-200 {
+    transition-delay: 200ms;
   }
   .delay-300 {
     transition-delay: 300ms;
   }
   .delay-450 {
     transition-delay: 450ms;
+  }
+  .duration-5 {
+    --tw-duration: 5ms;
+    transition-duration: 5ms;
   }
   .duration-200 {
     --tw-duration: 200ms;
