--- a/kwikstep-race/index.css
+++ b/kwikstep-race/index.css
@@ -1,25 +1,27 @@
 :root {
     --color: white;
-    --bk: #405c33;
+    --bk: #e3e3e3;
+
+
 }
 
 body {
     margin: 20px;
     font-family: 'Alte Haas Grotesk', sans-serif;
     font-weight: 700;
-    font-size: 1.4rem;
+    font-size: 1rem;
     background-color: var(--bk);
-    color: whitesmoke;
+    color: white;
 }
 
 
 .player {
     position: fixed;
     object-fit: cover;
-    height: calc(100vh - 40px);
+    height: calc(100svh - 40px);
     width: calc(100vw - 40px);
     overflow: hidden;
-    border-radius: 30px;
+    border-radius: 4px;
     top: 20px;
 }
 
@@ -31,7 +33,7 @@ video {
 }
 
 h1 {
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     letter-spacing: 3px;
     text-align: center;
 }
@@ -39,26 +41,25 @@ h1 {
 .info {
     z-index: 999;
     position: fixed;
-    height: calc(100vh - 40px);
+    height: calc(100vh - 20px);
     width: calc(100vw - 40px);
     overflow: scroll;
-    border-radius: 30px;
     top: 20px;
     left: 20px;
-    padding: 0 10%;
+    padding: 0 5% 40px 5%;
 }
 
 .info div {
-    padding: 40px 30px 20px 30px;
-    border-radius: 30px 30px 0 0;
+    padding: 30px 30px 20px 30px;
+    border-radius: 4px;
 
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 40px;
-    background-color: var(--bk);
+    gap: 20px;
+    background-color: #44643d;
 }
 
 /* p {
@@ -73,18 +74,26 @@ form {
     align-items: center;
     justify-items: center;
     border-radius: 20px;
-    gap: 20px;
+    gap: 6px;
+    background-color: transparent;
 }
 
 
-input[type="email"] {
+input[type="email"],
+input[type="text"] {
     width: 100%;
-    padding: 10px;
-    border-radius: 10px;
+    padding: 14px;
+    border-radius: 12px;
     color: black;
-    background-color: #e9e9e9;
-    font-size: 1.2rem;
-    text-align: center;
+    background-color: white;
+    text-align: left;
+    transition: all .4s ease-in-out;
+}
+
+input[type="email"]:focus,
+input[type="text"]:focus {
+    border-radius: 99px;
+    transition: all .4s ease-in-out;
 }
 
 input::placeholder {
@@ -97,8 +106,18 @@ input[type="submit"] {
     background-color: red;
     color: white;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 12px;
     cursor: pointer;
+    font-size: 1.2rem;
+    margin-top: 10px;
+    transition: all .4s ease-in-out;
+}
+
+input[type="submit"]:active {
+    border-radius: 99px;
+
+    transition: all .4s ease-in-out;
+
 }
 
 
@@ -110,6 +129,9 @@ img {
 
 small {
     font-size: 1rem;
+    text-align: center;
+    width: 100%;
+    opacity: .5;
 }
 
 button {
