--- a/kwikstep-race/index.css
+++ b/kwikstep-race/index.css
@@ -11,7 +11,7 @@ body {
     font-weight: 700;
     font-size: 1rem;
     color: white;
-    background-color: transparent;
+    background-color: black;
     transition: all .5s ease-in-out;
 
 }
