--- a/kwikstep-race/index.css
+++ b/kwikstep-race/index.css
@@ -6,14 +6,17 @@
 }
 
 body {
-    margin: 20px;
+    padding: 20px;
     font-family: 'Alte Haas Grotesk', sans-serif;
     font-weight: 700;
-    font-size: 1rem;
-    color: white;
+    font-size: 1.1rem;
     background-color: black;
     transition: all .5s ease-in-out;
 
+    display: flex;
+    flex-direction: column;
+    height: 100svh;
+    /*! box-sizing: content-box; */
 }
 
 
@@ -27,6 +30,11 @@ body {
     position: relative;
     flex-direction: column;
     gap: 20px;
+    line-height: 1.2;
+    height: 100%;
+    margin: auto;
+    -webkit-text-stroke: 1px white;
+    color: transparent;
 }
 
 
@@ -54,8 +62,12 @@ video {
 h1 {
     font-size: 1.8rem;
     letter-spacing: 2px;
+    font-weight: 800;
     text-align: center;
-    text-shadow: 0 0 10px red;
+    transition: all .5s ease-in-out;
+
+    color: transparent;
+    -webkit-text-stroke: 2px white;
 }
 
 .info {
@@ -74,6 +86,8 @@ h1 {
 
 p {
     text-indent: 14px;
+    transition: all .5s ease-in-out;
+
 }
 
 form {
@@ -82,14 +96,17 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-radius: 20px;
+    border-radius: 16px;
     gap: 10px;
-    background-color: transparent;
-    position: fixed;
+    /*! background-color: transparent; */
+    /*! position: fixed; */
     bottom: 0;
     left: 0;
     z-index: 999;
-    padding: 0 20px 20px 20px;
+    padding: 10px;
+    font-size: .9rem;
+    color: transparent;
+    -webkit-text-stroke: 1px black;
 }
 
 
@@ -98,7 +115,6 @@ input[type="text"] {
     width: 100%;
     padding: 10px;
     border-radius: 8px;
-    color: black;
     background-color: white;
     text-align: left;
     transition: all .4s ease-in-out;
@@ -117,14 +133,15 @@ input::placeholder {
 
 
 input[type="submit"] {
-    background-color: red;
-    color: white;
+    background-color: forestgreen;
     padding: 10px;
     border-radius: 12px;
     cursor: pointer;
     transition: all .4s ease-in-out;
     width: 100%;
     text-align: center;
+    -webkit-text-stroke: 1px white;
+
 }
 
 input[type="submit"]:active {
@@ -138,13 +155,19 @@ input[type="submit"]:active {
 
 
 .playerOn {
-    height: 70vh !important;
-    max-width: 95% !important;
+    max-width: 100% !important;
     transition: all .5s ease-in-out;
 }
 
 .textOn {
-    color: transparent;
+    color: transparent !important;
     transition: all .5s ease-in-out;
-    text-shadow: 0 0 0 transparent !important;
+    -webkit-text-stroke: 0px transparent !important;
+}
+
+.titleOn {
+    font-size: 1rem;
+    color: transparent !important;
+    transition: all .5s ease-in-out;
+    /* -webkit-text-stroke: 0px transparent !important; */
 }
