--- a/kwikstep-race/index.css
+++ b/kwikstep-race/index.css
@@ -35,6 +35,7 @@ body {
     margin: auto;
     -webkit-text-stroke: 1px white;
     color: transparent;
+    max-width: 400px;
 }
 
 
@@ -107,6 +108,8 @@ form {
     font-size: .9rem;
     color: transparent;
     -webkit-text-stroke: 1px black;
+    max-width: 400px;
+    margin: auto;
 }
 
 
